# Usd-Hydra-Filament

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plugInfo.json
examples/usd_examples/: test_sphere.usda
include/: Animal.h
resources/: plugInfo.json
src/: Animal.cpp  HdTutorialPlugin.cpp  HdTutorialRenderDelegate.h  filCamera.cpp  filCamera.h  filMesh.cpp  filMesh.h  filRenDelegate.cpp  filRenDelegate.h  filRenParam.h  filRenPass.cpp  filRenPass.h  filRenPlugin.cpp  filRenPlugin.h  filamentPlugin.cpp  filamentPlugin.h  filamentRenderDelegate.cpp  filamentRenderDelegate.h  filamentRenderPass.cpp  filamentRenderPass.h  main.cpp
test/: testMain.cpp
